--- a/contact.html
+++ b/contact.html
@@ -15,22 +15,21 @@
   <!-- Header -->
   <header class="px-3 px-lg-4 py-3">
     <div class="container-fluid">
-      <div class="d-flex justify-content-between align-items-center">
-        <!-- Logo -->
-        <a href="#" class="d-flex align-items-center text-decoration-none">
+      <div class="d-flex justify-content-between align-items-center flex-wrap">
+        <a href="index.html" class="d-flex align-items-center text-decoration-none">
           <img src="./logo.png" alt="Learning College Logo" class="rounded-3" style="width: 100px; height: auto;">
         </a>
 
-        <!-- Navigation -->
+        <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
         <nav class="navbar navbar-expand-lg">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="courses.html">Courses</a>
@@ -39,7 +38,7 @@
                 <a class="nav-link" href="admission.html">Admission</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
           </div>
